Fix bug causing overflow

--- a/src/components/BodyContainer/BodyContainer.sass
+++ b/src/components/BodyContainer/BodyContainer.sass
@@ -7,7 +7,6 @@
     align-items: center
     min-height: 100vh
     min-width: 90vw
-    overflow: hidden
     display: flex
     flex-direction: column
 
